Changes from Version 0.15-0 to 0.15-1 [xx-Jun-2011]

* Added tests for pathological cases (e.g. optimize degree and knots
  but set max degree to min degree or max segments to min hence no
  search possible).

* Added argument cv.threshold that uses exhaustive search for simple
  cases where the number of objective function evaluations is less
  than cv.threshold (currently set to 1000 but user can
  set). Naturally exhaustive search is always preferred but often
  unfeasible, so when it is feasible use it.

* Added additional demos for constrained estimation (Du, Parmeter, and
  Racine (2011)), inference, and a sine-based function.

* Substantial reductions in run-time realized.

  - Product kernel computation modified for improved run-time of
  kernel-based cross-validation and estimation.

  - Moved from lsfit to lm.fit and from lm to lm.wfit/lm.fit in
  cv.kernel.spline and cv.factor.spline (compute objective function
  values). Two effects - R devel indicates lm.fit/lm.wfit are more
  robust (confirmed for large number of predictors) and much faster
  cv.kernel.spline function emerges (run-time cut 20-30%).

  - The combined effects of these changes are noticeable. For instance,
  run-time for wage1 with 7 predictor cross-validation goes from 510
  seconds in 0.15-0 to 304 seconds due to use of lm.fit/lm.wfit
  described below to 148 seconds due to the modified kernel function.

Changes from Version 0.14-9 to 0.15-0 [23-Jun-2011]

* Thanks to Professor Brian Ripley, compile on Solaris system issues
  are resolved, and check/examples are reduced in run time to
  alleviate the excessive check times by the R development team. Many
  thanks to them for their patience and guidance.

* Minor changes to radial_rgl demo

Changes from Version 0.14-8 to 0.14-9 [20-Jun-2011]

* Cleaned up issues for creating binary for windows

* Setting seed in crs -> frscvNOMAD/krscvNOMAD fed to snomadr.cpp via
  snomadr.R for starting points when nmulti > 0
