@@ -1,5 +1,8 @@
 Changes from Version 0.15-0 to 0.15-1 [xx-Jun-2011]
 
+* Fixed glitch with return object and i/o when cv="bandwidth" and
+  degree=c(0,0,...,0)
+
 * Added tests for pathological cases (e.g. optimize degree and knots
   but set max degree to min degree or max segments to min hence no
   search possible).
